# Sem2-LabRab5

./: CMakeLists.txt  main.cpp
Card/: Card.cpp  Card.h
MyVector/: Iterator.h  MyVector.h
Reader/: Reader.cpp  Reader.h
Storage/: Storage.cpp
User/: User.h
Worker/: Worker.h
